flux/collector/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: collector-service
spec:
  type: NodePort
  selector:
    app: collector
  ports:
    - protocol: TCP
      port: 8080
